--- a/src/blocks/login-card/login-card.scss
+++ b/src/blocks/login-card/login-card.scss
@@ -4,7 +4,7 @@
   @include variables.boxes;
 
   min-width: 380px;
-  padding: 39px 30px 30px 29px;
+  padding: 39px 30px 34px 29px;
 
   @media (max-width: variables.$mobile) {
     margin-bottom: 0;
